/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.cloudera.bundleprocessor.subshell.command;

import com.cloudera.bundleprocessor.subshell.command.util.AutoCompleterWrapper;
import com.cloudera.bundleprocessor.subshell.format.Printable;

/**
 * Command is an interface for all {@link Command} class in the project.
 * This interface contains all the functions
 * which a {@link Command} class need to have
 * {@link Command} classes are specified for every command
 * which can be executed in the subshell
 */
public interface Command {

  Printable generatePrintable(String[] parameters);

  AutoCompleterWrapper createAutoCompleterWrapper();

  String getName();

  String getDescription();

  boolean readMore();

}
